# data-mgr

./: CMakeLists.txt  broken.cpp  decoder.cpp  decoder.sln  decoder.vcxproj  ipMsg_instances.txt  merge.cpp  merge.sln  merge.vcxproj
a1bin/: Message_def.h  Msg_B2A.c  Msg_B2A.h
artcm/: artcm.c  artcm.h
oxts/: NComRxC.c
x64/Debug/: decoder.exe.recipe  vc143.idb
x64/Debug/decoder.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  decoder.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
